# Belousov-Zhabotinskiy_reaction

./: README.md  main.py  pyproject.toml
